force-app/main/default/objects/TimesheetEntryNotes__c/TimesheetEntryNotes__c.object-meta.xml
<CustomObject>
    <label>Timesheet Entry Notes</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Timesheet Entrys Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>