force-app/main/default/objects/TimesheetEntryNotes__c/fields/CenturiOutboundNotification__c.field-meta.xml
<CustomField>
    <fullName>CenturiOutboundNotification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Notes which is sent to Outbound Notification table used by Mule(This field was created for NPL MA).</description>
    <label>Centuri Outbound Notification</label>
    <referenceTo>Centuri_Outbound_Notification__c</referenceTo>
    <relationshipLabel>Timesheet Entrys Notes</relationshipLabel>
    <relationshipName>Timesheet_Entrys_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>