force-app/main/default/objects/TimesheetEntryNotes__c/fields/CostCenter__c.field-meta.xml
<CustomField>
    <fullName>CostCenter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Cost center(This field was created for NPL MA).</description>
    <label>Cost Center</label>
    <referenceTo>Cost_Center__c</referenceTo>
    <relationshipLabel>Timesheet Entrys Notes</relationshipLabel>
    <relationshipName>Timesheet_Entrys_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>