force-app/main/default/objects/TimesheetEntryNotes__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <description>The employee’s first name (used for new hires that are not in the system yet)(This field was created for NPL MA).</description>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>