force-app/main/default/objects/TimesheetEntryNotes__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <description>The employee hours (used for new hires that are not in the system yet, the Time Adjuster sees this and enters the hours the next week)(This field was created for NPL MA).</description>
    <label>Hours</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>