force-app/main/default/objects/TimesheetEntryNotes__c/fields/Last4ssn__c.field-meta.xml
<CustomField>
    <fullName>Last4ssn__c</fullName>
    <description>The last four (4) of the employee’s Social Security Number (SSN)(This field was created for NPL MA).</description>
    <label>Last4ssn</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>