force-app/main/default/objects/TimesheetEntryNotes__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <description>The employee’s last name (used for new hires that are not in the system yet)(This field was created for NPL MA).</description>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>