force-app/main/default/objects/TimesheetEntryNotes__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <description>The note(This field was created for NPL MA).</description>
    <label>Note</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>