force-app/main/default/objects/TimesheetEntryNotes__c/fields/NoteType__c.field-meta.xml
<CustomField>
    <fullName>NoteType__c</fullName>
    <description>The note type

1: Employee note
2: Day note
3: New hire note
(This field was created for NPL MA).</description>
    <label>Note Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employee note</fullName>
                <label>Employee Note</label>
            </value>
            <value>
                <fullName>Day note</fullName>
                <label>Day Note</label>
            </value>
            <value>
                <fullName>New hire note</fullName>
                <label>New Hire</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>