force-app/main/default/objects/TimesheetEntryNotes__c/fields/PersonnelNumber__c.field-meta.xml
<CustomField>
    <fullName>PersonnelNumber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Employee&apos;s Employee ID(This field was created for NPL MA).</description>
    <label>PersonnelNumber</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Timesheet Entrys Notes (PersonnelNumber)</relationshipLabel>
    <relationshipName>Timesheet_Entrys_Notes1</relationshipName>
    <type>Lookup</type>
</CustomField>