force-app/main/default/objects/TimesheetEntryNotes__c/fields/Posting_Key__c.field-meta.xml
<CustomField>
    <fullName>Posting_Key__c</fullName>
    <description>Add WBS or Center Center calculation if WBS element is blank(This field was created for NPL MA).</description>
    <formula>IF( !ISBLANK(WBSElement__c ), 
			WBSElement__r.SAP_WBS_ElementWithCodingMask__c, 
			CostCenter__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Posting Key</label>
    <type>Text</type>
</CustomField>