force-app/main/default/objects/TimesheetEntryNotes__c/fields/PostingKey__c.field-meta.xml
<CustomField>
    <fullName>PostingKey__c</fullName>
    <description>The WBS or Cost Center(This field was created for NPL MA).</description>
    <label>Posting Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>