force-app/main/default/objects/TimesheetEntryNotes__c/fields/SequenceNumber__c.field-meta.xml
<CustomField>
    <fullName>SequenceNumber__c</fullName>
    <description>The sequence number (sent as blank on create)(This field was created for NPL MA).</description>
    <label>Sequence Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>