force-app/main/default/objects/TimesheetEntryNotes__c/fields/Timesheet__c.field-meta.xml
<CustomField>
    <fullName>Timesheet__c</fullName>
    <description>Lookup To parent Centuri Timesheet(This field was created for NPL MA).</description>
    <label>Timesheet</label>
    <referenceTo>Diab_Timesheet__c</referenceTo>
    <relationshipLabel>Timesheet Entrys Notes</relationshipLabel>
    <relationshipName>Timesheet_Entrys_Notes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>