force-app/main/default/objects/TimesheetEntryNotes__c/fields/WBSElement__c.field-meta.xml
<CustomField>
    <fullName>WBSElement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The WBS Number(This field was created for NPL MA).</description>
    <label>WBSElement</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Timesheet Entrys Notes</relationshipLabel>
    <relationshipName>Timesheet_Entrys_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>