force-app/main/default/objects/TimesheetEntryNotes__c/validationRules/Check_Note_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Note_Type</fullName>
    <active>true</active>
    <description>Note type is Required</description>
    <errorConditionFormula>ISBLANK(TEXT(NoteType__c))</errorConditionFormula>
    <errorDisplayField>NoteType__c</errorDisplayField>
    <errorMessage>Note type is Required</errorMessage>
</ValidationRule>