force-app/main/default/objects/TimesheetEntryNotes__c/validationRules/Check_PersonnelNumber.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_PersonnelNumber</fullName>
    <active>true</active>
    <description>Personnel Number is Required</description>
    <errorConditionFormula>ISBLANK(PersonnelNumber__c )</errorConditionFormula>
    <errorDisplayField>PersonnelNumber__c</errorDisplayField>
    <errorMessage>Personnel Number is Required</errorMessage>
</ValidationRule>