force-app/main/default/objects/TimesheetEntryNotes__c/validationRules/Check_WorkDate.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_WorkDate</fullName>
    <active>true</active>
    <description>Work Date is Required</description>
    <errorConditionFormula>ISBLANK(WorkDate__c)</errorConditionFormula>
    <errorDisplayField>WorkDate__c</errorDisplayField>
    <errorMessage>Work Date is Required</errorMessage>
</ValidationRule>