force-app/main/default/objects/TimesheetEntryNotes__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NoteType__c</columns>
    <columns>Timesheet__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>PersonnelNumber__c</columns>
    <columns>WorkDate__c</columns>
    <columns>WBSElement__c</columns>
    <columns>Note__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>